--- a/subsystem1.yaml
+++ b/subsystem1.yaml
@@ -1,7 +1,10 @@
 ---
-subsystem1:
-   signal1: [ ECU1 , ECU2, ECU3 ]
-   signal2: [ ECU1 , ECU2 ]
-   signal3: [ ECU2 , ECU5 ]
-   signal4: [ ECU11, ECU100, ECU200, ECU300]
-   signal5: [ EC11 ]
+function1:
+     signal1: [ ECU1 , ECU2, ECU3 ]
+     signal2: [ ECU1 , ECU2 ]
+     signal3: [ ECU2 , ECU5 ]
+     signal4: [ ECU11,  ECU300]
+function2:
+     signal4: [ ECU11,  ECU1, ECU300]
+     signal5: [ EC11 ]
+     signal3: [ ECU2 , ECU5 ]
