--- a/by-signal/generated.yaml
+++ b/by-signal/generated.yaml
@@ -1,57 +1,66 @@
 signal1:
-  function1:
-    receiver:
-    - ECU2
-    - ECU3
-    sender:
-    - ECU1
+  subsystem1.yaml:
+    function1:
+      receiver:
+      - ECU2
+      - ECU3
+      sender:
+      - ECU1
   subsystem2:
-    receiver:
-    - ECU2
-    sender:
-    - ECU1
+    subsystem2:
+      receiver:
+      - ECU2
+      sender:
+      - ECU1
 signal2:
-  function1:
-    receiver:
-    - ECU2
-    sender:
-    - ECU1
+  subsystem1.yaml:
+    function1:
+      receiver:
+      - ECU2
+      sender:
+      - ECU1
   subsystem2:
-    receiver:
-    - ECU2
-    sender:
-    - ECU1
+    subsystem2:
+      receiver:
+      - ECU2
+      sender:
+      - ECU1
 signal3:
   subsystem2:
-    receiver:
-    - ECU5
-    sender:
-    - ECU2
+    subsystem2:
+      receiver:
+      - ECU5
+      sender:
+      - ECU2
 signal4:
-  function1:
-    receiver:
-    - ECU300
-    sender:
-    - ECU11
-  function2:
-    receiver:
-    - ECU1
-    - ECU300
-    sender:
-    - ECU11
+  subsystem1.yaml:
+    function1:
+      receiver:
+      - ECU300
+      sender:
+      - ECU11
+    function2:
+      receiver:
+      - ECU1
+      - ECU300
+      sender:
+      - ECU11
   subsystem2:
-    receiver:
-    - ECU200
-    - ECU300
-    sender:
-    - ECU11
+    subsystem2:
+      receiver:
+      - ECU200
+      - ECU300
+      sender:
+      - ECU11
 signal5:
-  function2:
-    receiver: []
-    sender:
-    - EC11
+  subsystem1.yaml:
+    function2:
+      receiver: []
+      sender:
+      - EC11
 signal7:
   subsystem2:
-    receiver: []
-    sender:
-    - EC11
+    subsystem2:
+      receiver: []
+      sender:
+      - EC11
