--- a/src/subsystem1.yaml
+++ b/src/subsystem1.yaml
@@ -2,9 +2,9 @@
 function1:
      signal1: [ ECU1 , ECU2, ECU3 ]
      signal2: [ ECU1 , ECU2 ]
-     signal3: [ ECU2 , ECU5 ]
+     #signal3: [ ECU2 , ECU5 ]
      signal4: [ ECU11,  ECU300]
 function2:
      signal4: [ ECU11,  ECU1, ECU300]
      signal5: [ EC11 ]
-     signal3: [ ECU2 , ECU5 ]
+     #signal3: [ ECU2 , ECU5 ]
