--- a/by-signal/generated.yaml
+++ b/by-signal/generated.yaml
@@ -7,7 +7,7 @@ signal1:
       sender:
       - ECU1
   subsystem2:
-    subsystem2:
+    function1:
       receiver:
       - ECU2
       sender:
@@ -20,14 +20,14 @@ signal2:
       sender:
       - ECU1
   subsystem2:
-    subsystem2:
+    function1:
       receiver:
       - ECU2
       sender:
       - ECU1
 signal3:
   subsystem2:
-    subsystem2:
+    function1:
       receiver:
       - ECU5
       sender:
@@ -46,7 +46,7 @@ signal4:
       sender:
       - ECU11
   subsystem2:
-    subsystem2:
+    function2:
       receiver:
       - ECU200
       - ECU300
@@ -60,7 +60,7 @@ signal5:
       - EC11
 signal7:
   subsystem2:
-    subsystem2:
+    function2:
       receiver: []
       sender:
       - EC11
